[package]
name = "orp"
version = "0.9.2-SNAPSHOT"
edition = "2021"
authors = ["Frédérik Bilhaut <frederik.bilhaut@gmail.com>"]
license = "Apache-2.0"
keywords = ["ort", "pipeline", "onnx"]
readme = "./Readme.md"
description = "Lightweight framework for building ONNX runtime pipelines with ort"
homepage = "https://github.com/fbilhaut/orp"
repository = "https://github.com/fbilhaut/orp"
documentation = "https://docs.rs/fbilhaut/orp"

[dependencies]
ort = { version = "=2.0.0-rc.9" }
ndarray = { version = "0.16.0" }
composable = { version = "0.9.0" }

[features]
default = []
load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
xnnpack = ["ort/xnnpack"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]